fixed layout breaking issue of by back to top and add it in layout for all page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,3 +54,6 @@ input, textarea, select {
 .lead {
   font-size: 18px;
 }
+.back-to-top {
+  padding: 10px;
+}
